--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,17 @@
+# Python
+__pycache__/
+*.pyc
+
+# Virtual environment
+venv/
+.env
+
+# Local SQLite database
+students.db
+
+# OS / editor files
+.DS_Store
+Thumbs.db
+.vscode/
+.idea/
 
