--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,9 @@
+# Rename this file to .env and put your real keys there.
+# DO NOT COMMIT the real .env file.
+
+DEEPSEEK_API_KEY=sk-your-deepseek-key-here
+DEEPSEEK_BASE_URL=https://api.deepseek.com/v1
+DEEPSEEK_MODEL=deepseek-chat
+CALENDLY_EMBED_LINK=https://calendly.com/your-organization/30min
+STUDYBUDDY_ADMIN_PW=someStrongPassword123
 
