--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DEEPSEEK_API_KEY=sk-your-real-key
+DEEPSEEK_API_KEY=sk-f649abd7437a4d00987197bab21a3ae7
 DEEPSEEK_BASE_URL=https://api.deepseek.com/v1
 DEEPSEEK_MODEL=deepseek-chat
-CALENDLY_EMBED_LINK=https://calendly.com/your-organization/30min
+CALENDLY_EMBED_LINK=https://calendly.com/cprekshith/30min
 STUDYBUDDY_ADMIN_PW=someStrongPassword123
