--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,14 @@
-# Rename this file to .env and put your real keys there.
-# DO NOT COMMIT the real .env file.
+# Rename this file to .env and fill your real values.
+# DO NOT commit your actual .env file.
 
-DEEPSEEK_API_KEY=sk-your-deepseek-key-here
-DEEPSEEK_BASE_URL=https://api.deepseek.com/v1
-DEEPSEEK_MODEL=deepseek-chat
-CALENDLY_EMBED_LINK=https://calendly.com/your-organization/30min
-STUDYBUDDY_ADMIN_PW=someStrongPassword123
+# Google Gemini API Key
+GEMINI_API_KEY=AIzaSyDt4Ui_YFRvOPofvk9uVOINmT-HEAz_TYY
 
+# Gemini model (default recommended)
+GEMINI_MODEL=gemini-pro
+
+# Admin login password
+STUDYBUDDY_ADMIN_PW=adminpass123
+
+# Calendly link for scheduling mock interviews
+CALENDLY_EMBED_LINK=https://calendly.com/your-link/30min
