--- a/.env
+++ b/.env
@@ -1,5 +1,14 @@
-DEEPSEEK_API_KEY=sk-f649abd7437a4d00987197bab21a3ae7
-DEEPSEEK_BASE_URL=https://api.deepseek.com/v1
-DEEPSEEK_MODEL=deepseek-chat
-CALENDLY_EMBED_LINK=https://calendly.com/cprekshith/30min
-STUDYBUDDY_ADMIN_PW=someStrongPassword123
+# Rename this file to .env and fill your real values.
+# DO NOT commit your actual .env file.
+
+# Google Gemini API Key
+GEMINI_API_KEY=AIzaSyDt4Ui_YFRvOPofvk9uVOINmT-HEAz_TYY
+
+# Gemini model (default recommended)
+GEMINI_MODEL=gemini-pro
+
+# Admin login password
+STUDYBUDDY_ADMIN_PW=adminpass123
+
+# Calendly link for scheduling mock interviews
+CALENDLY_EMBED_LINK=https://calendly.com/your-link/30min
