--- a/.env
+++ b/.env
@@ -7,8 +7,15 @@ GEMINI_API_KEY=AIzaSyDt4Ui_YFRvOPofvk9uVOINmT-HEAz_TYY
 # Gemini model (default recommended)
 GEMINI_MODEL=gemini-pro
 
-# Admin login password
 STUDYBUDDY_ADMIN_PW=adminpass123
+COUNSELOR_PASSWORD=counselorpass123   # shared password for counselors
 
-# Calendly link for scheduling mock interviews
 CALENDLY_EMBED_LINK=https://calendly.com/your-link/30min
+
+# Email (optional, for notifications)
+EMAIL_ENABLED=false
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=yourgmail@gmail.com
+SMTP_PASSWORD=your-app-password
+EMAIL_FROM=yourgmail@gmail.com
