--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ GEMINI_MODEL=gemini-2.5-flash
 STUDYBUDDY_ADMIN_PW=adminpass123
 COUNSELOR_PASSWORD=counselorpass123   # shared password for counselors
 
-CALENDLY_EMBED_LINK=https://calendly.com/your-link/30min
+CALENDLY_EMBED_LINK=https://calendly.com/cprekshith/new-meeting
 
 # Email (optional, for notifications)
 EMAIL_ENABLED=false
